<!--<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MenuMainActivity"
    android:background="@color/GMcolorAccent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        app:theme="@style/GeoMemoTheme"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" >

       <!-- <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleMarginStart="48dp"
        app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed">-->

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/GeoMemoTheme"
            android:backgroundTint="#00AA0099"
            app:contentInsetStart="@dimen/margin_distance"
            android:paddingStart="@dimen/toolbar_horizontal_padding"
            android:paddingEnd="@dimen/toolbar_horizontal_padding">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <!-- This is a centered logo -->
            <ImageView
                android:id="@+id/toolbar_logo"
                android:src="@mipmap/brain_logo"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginEnd="?attr/actionBarSize"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_gravity="left"
                android:contentDescription="@string/toolbar_logo_content_description"/>
            </FrameLayout>

        </android.support.v7.widget.Toolbar>



  <!--      </android.support.design.widget.CollapsingToolbarLayout>-->
    </android.support.design.widget.AppBarLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/add_geomemo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_main_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingHorizontal="@dimen/button_padding"
            android:paddingVertical="@dimen/button_padding"

            style="@style/Widget.AppCompat.Button.Colored"
            />

        <Button
            android:id="@+id/show_geomemo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_main_show"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingHorizontal="@dimen/button_padding"
            android:paddingVertical="@dimen/button_padding"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:id="@+id/history_geomemo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_main_history"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingHorizontal="@dimen/button_padding"
            android:paddingVertical="@dimen/button_padding"
            style="@style/Widget.AppCompat.Button.Colored"/>
    </LinearLayout>
</RelativeLayout>

<!--</FrameLayout>-->
<!--
<android.support.design.widget.CoordinatorLayoust xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"

            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/testua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello World!"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
-->